k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: graphvoyage
  labels:
    name: graphvoyage
    app: travel-planner
